# ideogramoss-colab

./: Ideogram4_Colab.ipynb  Ideogram4_Colab.ipynb.bak  README.md  pyproject.toml  run_inference.py
docs/: development.md
src/ideogram4/: __init__.py  magic_prompt.py  modeling_ideogram4.py  pipeline_ideogram4.py  safety.py  sampler_configs.py
